Fixed bug #42473 (ob_start php://output and headers)